src/test/fail/self_outside_class.ly
#[
SyntaxError: 'self' must be used within a class.
Where: File "test/fail/self_outside_class.ly" at line 6
]#

self
